  TextInputPanel created
  EntityPropertyEditor now uses TextInputPanel for text input
  FrameworkUiUtil.createDateInputField renamed to createDateInputPanel
  EntityBindingFactory.createDateInputField renamed to createDateInputPanel
  EntityBindingFactory renamed to EntityBindingPanel
  UiUtil.showInDialog button caption and mnemonic is now consistent
  TextInputPanel.getTextComponent() added
  EntityDbUtil created, moved some db related stuff from EntityUtil to this class as well as to EntityDbConnection
  TestEntityDbConnection created to accommodate the above (moved dml test case from TestEntity)
  Fixed and added copyright messages
  EntityUtil.isPrimaryKeyModified() added
  EntityModel.update() fixed so that if primary keys were involved in the update the table model is refreshed afterwards
  CompactDotDateFormat mask fixed
  EntityModel.evtLinkedDetailModelChanged now only updates the selected detail model with the active entity if it is non-null
  TestEntityDbConnection fixed, it did not initialize the required domain model
  Entity.setReferenceKeyValues() subtle bug fixed, when a EntityProperty was part of the primary key it didn't update the modified state when changed since it asked the primary key if it had a value using the EntityProperty propertyID (_ref) so it was always an initialization
  EntitySearchField renamed to EntityLookupField
  FrameworkUiUtil.createEntitySearchField() renamed to createEntityLookupField
  EntityBindingPanel.createEntitySearchField() renamed to createEntityLookupField
  ControlProvider moved from ui to ui.control, where it belongs
  ControlSet.iterate() made static and moved to ControlProvider
  UiUtil.handleException() moved to ExceptionDialog to remove a cyclical dependency
  UiUtil.getUser() moved to LoginPanel to remove a cyclical dependency
  EntityUtil.getValueString/printPropertyValues/copyPropertyValue/isValueNull/equal/validateValue/getPropertyChangeDebugString moved to Entity to remove a cyclical dependency