@@ -325,3 +325,4 @@
   UiUtil.handleException() moved to ExceptionDialog to remove a cyclical dependency
   UiUtil.getUser() moved to LoginPanel to remove a cyclical dependency
   EntityUtil.getValueString/printPropertyValues/copyPropertyValue/isValueNull/equal/validateValue/getPropertyChangeDebugString moved to Entity to remove a cyclical dependency
+  EntityLookupField renamed some variables and methods from search... to lookup...
